<resources>
    <string name="app_name">Asa</string>
    <string name="text_asa_logo">Asa Logo</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_google">Google</string>
    <string name="text_or">or</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password_reset">Forgot password? Reset</string>
    <string name="text_not_yet_registered">Not yet registered? Sign up</string>
    <string name="student">Student</string>
    <string name="staff_adviser">Staff Adviser</string>
    <string name="continue_text">continue</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="_sign_up"> Sign up</string>
    <string name="reset">  Reset</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_registered">Already registered?</string>
    <string name="staff_no">Staff no.</string>
    <string name="you_re_all_set">you’re all set</string>
    <string name="just_a_few_more_steps_and">Just a few more steps and</string>
    <string name="almost_done">Almost done</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youre_all_set">You’re all set. ASA will now be your student assistant.</string>
    <string name="done">Done</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="what_s_your_preferred_reading_period">What’s your preferred reading period?</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="what_kind_of_reader_are_you">What kind of reader are you?</string>
    <string name="i_can_read_on_week_days">I can read on week days</string>
    <string name="i_can_read_on_weekend">I can read on the weekend</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="what_s_your_average_reading_time">What’s your average reading time?</string>
    <string name="_1_to_2_hours">1 to 2 hours</string>
    <string name="_3_to_4_hours">3 to 4 hours</string>
    <string name="reg_no">Reg no.</string>
    <string name="title_activity_authentication">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="_50percent">50%</string>
    <string name="reading_timetable">Reading Timetable</string>
    <string name="reading_progress">Reading Progress</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="cgpa_projector">CGPA projector</string>
    <string name="assignments">Assignments</string>
    <string name="save_course">Save Course</string>
    <string name="lecture_days">Lecture days</string>
    <string name="lecturer">Lecturer</string>
    <string name="description">Description</string>
    <string name="credit_unit">Credit unit</string>
    <string name="course_code">Course code</string>
    <string name="add_course">Add course</string>
    <string name="course_title">Course title</string>
    <string name="notifications">notifications</string>
    <string name="venue">Venue</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="courses_offered">Courses offered</string>
    <string name="_0percent">0%</string>
    <string name="hi">Hi,</string>
    <string name="you_do_not_have_any_plan_yet">You do not have any plan yet</string>
    <string name="create_a_plan_by_clicking_the_start_new_semester_button">Create a plan by clicking the start new semester button</string>
    <string name="start_new_semester">Start new semester</string>
    <string name="add_courses_to_be_offered_this_semester">Add courses to be offered this semester</string>
    <string name="add_courses_to_create_a_plan_for_a_new_semester">Add courses to create a plan for a new semester</string>
    <string name="add_new_courses">Add new courses</string>
    <string name="today_you_have">Today, you have</string>
    <string name="and">and</string>
    <string name="today_s_classes">Today\'s classes</string>
    <string name="courses">Courses</string>
    <string name="daily_reading_chart">Daily reading chart</string>
    <string name="reading_time">Reading Time</string>
    <string name="overall_reading_time">Overall \nreading time</string>
    <string name="average_reading_time">Average \nreading time</string>
    <string name="title">Extend By</string>
    <string name="time_suffix">Mins</string>
    <string name="time_prefix">Hr</string>
    <string name="extend_by">Extend</string>
    <string name="time">%02d:%02d:%02d</string>
    <string name="timer">Timer</string>
    <string name="btn_stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="bio">Bio</string>
    <string name="save_changes">Save changes</string>
    <string name="department">Department</string>
    <string name="school">School</string>

    <string name="please_select_level">Please Select Level</string>
    <string name="search_student">Search student</string>
</resources>
