<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.SelectUserTypeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <ImageView
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:background="@drawable/ic_logo"
            android:contentDescription="@string/text_asa_logo"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_sign_in"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/sign_in_as_student_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/input_field_background"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:text="@string/student"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_student_icon"
            app:drawableStartCompat="@drawable/ic_student_icon"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/sign_in_as_staff_adviser_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/input_field_background"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:text="@string/staff_adviser"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_student_icon"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_as_student_tv" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:background="@drawable/button_background"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_as_staff_adviser_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sign_in_as_staff_adviser_tv"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_as_staff_adviser_tv" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="80dp"
            android:text="@string/not_yet_registered"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/button_continue"
            app:layout_constraintTop_toBottomOf="@+id/button_continue" />

        <TextView
            android:id="@+id/move_to_sign_up_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
